# Mani_P_Moveit2

./: README.md
mani_p_description/: CMakeLists.txt  package.xml
mani_p_description/launch/: display.launch.py  mani_p_moveit2.launch.py
mani_p_description/meshes/: Base_arm_visual.stl  Gripper_collision.STL  Gripper_visual.stl  L1.STL  L1_collision.STL  L2.STL  L2_collision.STL  L2_visual.stl  L3_visual.stl  L4.STL  L4_visual.stl  L5_visual.stl  base_collision.STL  finger_bottom_l_visual.stl  finger_bottom_r_visual.stl  link1.stl  palm_link_visual.stl  table_collision.STL  table_visual.STL
mani_p_description/meshes/meshes/: finger_bottom_l.STL  finger_bottom_r.STL  finger_link_bl.STL  finger_link_br.STL  finger_middle_l.STL  finger_middle_r.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  main_gear_link.STL  palm_link.STL
mani_p_description/robot/: Manipulator_station_urdf_2.urdf  mani_p.core.xacro  mani_p.core2.xacro  mani_p.ros2.control.xacro  mani_p.ros2.control2.xacro  mani_p.sensors.xacro  mani_p.transmission.xacro  mani_p.transmission2.xacro  mani_p.urdf.xacro  mani_p.urdf2.xacro
mani_p_description/robot/Manipulator_station_urdf_2/: CMakeLists.txt  package.xml
mani_p_description/robot/Manipulator_station_urdf_2/config/: joint_names_Manipulator_station_urdf_2.yaml
mani_p_description/robot/Manipulator_station_urdf_2/items/: CubeYellow.STL
mani_p_description/robot/Manipulator_station_urdf_2/launch/: display.launch  gazebo.launch
mani_p_description/robot/Manipulator_station_urdf_2/meshes/: L1.STL  (+2 more)
mani_p_description/rviz/: mani_p.rviz
(+57 files in other folders)
